# rust-fil-proofs

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile-ci  Dockerfile-profile  FUNDING.json  README.md  RELEASE.md  bench.config.toml  build.rs  config.json  large.rs  lib.rs  parameters.json  release.toml  rust-fil-proofs.config.toml  rust-fil-proofs.config.toml.sample  rust-toolchain  rustfmt.toml  small.rs  srs-inner-product.json
accumulators/: Cargo.toml
accumulators/src/: hash.rs  lib.rs  math.rs  primes.rs  proofs.rs  rsa.rs  traits.rs
drop-struct-macro-derive/: Cargo.toml  README.md
drop-struct-macro-derive/src/: lib.rs
ffi-toolkit/: Cargo.toml  README.md
ffi-toolkit/src/: lib.rs
fil-blake2s/: Cargo.toml  README.md
fil-blake2s/benches/: blake2s.rs
fil-blake2s/examples/: main.rs
fil-blake2s/src/: lib.rs
fil-halo2-gadgets/: Cargo.toml
fil-halo2-gadgets/src/: boolean.rs  lib.rs  select.rs  sha256.rs  sha256_compress.rs  uint32.rs  utilities.rs
fil-proofs-bin/: Cargo.toml  Justfile  README.md
fil-proofs-bin/scripts/: pc1_pc2.sh  pc1_pc2_cc.sh
fil-proofs-bin/src/: cli.rs  lib.rs
fil-proofs-param/: Cargo.toml  README.md  parameters.json
fil-proofs-param/scripts/: pin-params.sh
fil-proofs-param/src/: lib.rs
fil-proofs-tooling/: Cargo.toml  README.md  build.rs  release.toml
fil-proofs-tooling/scripts/: aggregate-benchmarks.sh  benchy-remote.sh  benchy.sh  micro-remote.sh  micro.sh  paramcache-remote.sh  retry.sh  run-remote.sh  with-dots.sh  with-lock.sh
fil-proofs-tooling/src/: lib.rs  measure.rs  metadata.rs  shared.rs
filecoin-hashers/: Cargo.toml  README.md  build.rs
filecoin-hashers/src/: blake2s.rs  lib.rs  poseidon.rs  poseidon_types.rs  sha256.rs  types.rs
filecoin-params/: Cargo.toml  README.md
filecoin-params/src/: lib.rs
filecoin-phase2/: Cargo.toml  README.md
filecoin-proofs/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  parameters.json
filecoin-proofs/benches/: aggregation.rs  halo2_keypairs.rs  preprocessing.rs
filecoin-proofs/examples/: bbf-vanilla.rs  beacon-post.rs  drgporep-vanilla-disk.rs  drgporep-vanilla.rs  drgporep.rs  encoding.rs  ffi.rs  merklepor.rs  stacked.rs  zigzag.rs  zigzagdrgporep-vanilla.rs
filecoin-proofs/fuzz/: Cargo.toml  README.md
filecoin-proofs/src/: api.rs  cache.rs  caches.rs  chunk_iter.rs  commitment_reader.rs  commitments.rs  constants.rs  error.rs  ffi_sector_builder.rs  ffi_stateless.rs  file_cleanup.rs  force_commitment_reader.rs  fr32.rs  fr32_reader.rs  lib.rs  pad_reader.rs  param.rs  parameters.rs  pieces.rs  post.rs  post_adapter.rs  responses.rs  safe.rs  seal.rs  serde_big_array.rs  singletons.rs  unseal.rs  util.rs
filecoin-proofs/tests/: aggregate.rs  aggregate_proof_bytes  api.rs  api_shared.rs  constants.rs  fr32.rs  halo2book_example.rs  mod.rs  parameters.rs  pieces.rs  regression.rs  resume.rs  seal.rs  seal_regression_records-v16.json  seal_regression_records-v18.json  suite.rs  test_boolean_xor.rs  test_ch_operation.rs  test_ch_word_operation.rs  test_fp_xor.rs  test_load_32bit_word.rs  test_maj_operation.rs  test_maj_word_operation.rs  test_sha256_one_round.rs  test_u32word_logical_operations.rs  test_u32word_modular_addition.rs  test_u32word_xor.rs  upgrade.rs  window.rs  winning.rs
filecoin-proofs/winning_post/: .tmp9BsHuZ  .tmpcCAjpp  metadata
fr32/: Cargo.toml  README.md
fr32/benches/: bytes.rs  fr.rs  preprocessing.rs
fr32/src/: convert.rs  lib.rs  padding.rs  padding_map.rs  reader.rs  types.rs
logging-toolkit/: Cargo.toml  README.md
logging-toolkit/src/: lib.rs
phase2/: Cargo.toml  README.md
phase2/src/: lib.rs  main.rs  small.rs
phase2/tests/: large.rs  small.rs
sector-base/: Cargo.toml  README.md  build.rs
sector-base/examples/: ffi.rs
sector-base/src/: lib.rs
sector-builder-ffi/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
sector-builder-ffi/examples/: simple.rs
sector-builder-ffi/src/: builder.rs  lib.rs  responses.rs  singletons.rs  stateless.rs
sha2raw/: Cargo.toml  README.md
sha2raw/benches/: compress256.rs
sha2raw/src/: consts.rs  lib.rs  platform.rs  sha256.rs  sha256_intrinsics.rs  sha256_utils.rs
storage-proofs/: .gitignore  Cargo.toml  README.md  parameters.json
storage-proofs-core/: Cargo.toml  srs-inner-product.json
storage-proofs-core/benches/: blake2s.rs  drgraph.rs  merkle.rs  merkle_groth16_halo2.rs  misc.rs  sha256.rs  xor.rs
storage-proofs-core/examples/: merkle_groth16.rs  merkle_halo2.rs
storage-proofs-core/src/: api_version.rs  cache_key.rs  commitment_reader.rs  compound_proof.rs  data.rs  drgraph.rs  error.rs  halo2_proofs.rs  lib.rs  measurements.rs  multi_proof.rs  nova.rs  parameter_cache.rs  pieces.rs  por.rs  proof.rs  sector.rs  settings.rs  test_helper.rs  util.rs
storage-proofs-core/tests/: bench_merkle_circuit.rs  por_circuit.rs  por_compound.rs  por_vanilla.rs
storage-proofs-porep/: Cargo.toml  build.rs
storage-proofs-porep/benches/: encode.rs  parents.rs
storage-proofs-porep/src/: encode.rs  lib.rs
storage-proofs-porep/tests/: common.rs  drg_circuit.rs  drg_compound.rs  drg_vanilla.rs  halo2_circuit.rs  halo2_compound.rs  halo2_stacked_circuit.rs  halo2_stacked_compound.rs  stacked_circuit.rs  stacked_compound.rs  stacked_vanilla.rs
storage-proofs-post/: Cargo.toml
storage-proofs-post/src/: lib.rs  nova.rs
storage-proofs-post/tests/: election_circuit.rs  election_compound.rs  election_vanilla.rs  fallback_circuit.rs  fallback_compound.rs  fallback_vanilla.rs  halo2_circuit.rs  halo2_compound.rs  rational_circuit.rs  rational_compound.rs  rational_vanilla.rs
storage-proofs-update/: Cargo.toml  README.md
storage-proofs-update/src/: apex.rs  challenges.rs  challenges_bucket.rs  circuit.rs  circuit_poseidon.rs  compound.rs  constants.rs  encode.rs  gadgets.rs  lib.rs  utils.rs  vanilla.rs
storage-proofs-update/tests/: circuit.rs  circuit_poseidon.rs  compound.rs  halo2_circuit.rs  halo2_compound.rs
storage-proofs/benches/: blake2s.rs  drgraph.rs  encode.rs  fr.rs  hybrid_merkle.rs  (+11 more)
(+793 files in other folders)
