[workspace]
members = [
  "fil-proofs-param",
  "fil-proofs-tooling",
  "filecoin-hashers",
  "filecoin-proofs",
  "fr32",
  "sha2raw",
  "storage-proofs-core",
  "storage-proofs-porep",
  "storage-proofs-post",
  "storage-proofs-update",
]

[workspace.dependencies]
fil-proofs-param = { path = "fil-proofs-param", default-features = false, version = "~14.0.0" }
fil-proofs-tooling = { path = "fil-proofs-tooling", default-features = false, version = "~19.0.0" }
filecoin-hashers = { path = "filecoin-hashers", default-features = false, version = "~14.0.0" }
filecoin-proofs = { path = "filecoin-proofs", default-features = false, version = "~19.0.0" }
fr32 = { path = "fr32", default-features = false, version = "~12.0.0" }
sha2raw = { path = "sha2raw", default-features = false, version = "~14.0.0" }
storage-proofs-core = { path = "storage-proofs-core", default-features = false, version = "~19.0.0" }
storage-proofs-porep = { path = "storage-proofs-porep", default-features = false, version = "~19.0.0" }
storage-proofs-post = { path = "storage-proofs-post", default-features = false, version = "~19.0.0" }
storage-proofs-update = { path = "storage-proofs-update", default-features = false, version = "~19.0.0" }
# Sorted alphabetically
anyhow = "1.0.23"
bellperson = "0.26.0"
bincode = "1.1.2"
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
blstrs = "0.7.0"
byte-slice-cast = "1.0.0"
byteorder = "1.3.4"
cpu-time = "1.0.0"
criterion = "0.3.2"
dialoguer = "0.10.0"
fdlimit = "0.3"
ff = "0.13.0"
fil_logger = "0.1.6"
generic-array = "0.14.4"
gperftools = "0.2"
hex = "0.4.2"
humansize = "1.1.0"
itertools = "0.13"
lazy_static = "1.2"
log = "0.4.7"
memmap2 = "0.5.6"
merkletree = "0.23.0"
neptune = { version = "11.0.0", features = ["bls", "arity2", "arity4", "arity8", "arity11", "arity16", "arity24", "arity36"] }
num_cpus = "1.10.1"
pretty_assertions = "1.2.0"
rand = "0.8"
rand_xorshift = "0.3.0"
rayon = "1.3.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.2"
structopt = "0.3.12"
tempfile = "3"
thiserror = "2"
typenum = "1.11.2"
