[package]
name = "accumulators"
version = "0.1.0"
authors = ["dignifiedquire <dignifiedquire@users.noreply.github.com>"]
edition = "2018"

[dependencies]
num-bigint = { version = "0.2", features = ["rand", "i128", "u64_digit"], package = "num-bigint-dig" }
num-traits = "^0.2.6"
rand = "^0.5"
rsa = { git = "https://github.com/RustCrypto/RSA" }
failure = "^0.1.3"
num-integer = "0.1.39"
blake2 = "0.8.0"
generic-array = "0.12.0"
