[package]
name = "drop_struct_macro_derive"
description = "A derive macro to free (drop) memory for structs that are used in the FFI."
version = "0.2.0"
authors = ["Volker Mische <volker.mische@gmail.com>"]
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits"] }
quote = "0.6.3"
proc-macro2 = "0.4.27"
