[package]
name = "ffi-toolkit"
description = "A collection of functions useful for working with the Rust FFI."
version = "0.1.1-alpha.0"
authors = ["laser <l@s3r.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
libc = "0.2"
