[package]
name = "fil-blake2s"
version = "0.1.0"
authors = ["sean-sn <sean@supranational.net>", "dignifiedquire <me@diginfiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
blake2s_simd = "0.5.8"

[dev-dependencies]
rand = "0.6.5"
