[package]
name = "fil-halo2-gadgets"
version = "0.1.0"
authors = []
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
ff = "0.11.0"
# halo2_gadgets = { git = "https://github.com/drpetervannostrand/halo2", branch = "sha256-chip", features = ["unstable"] }
# halo2_proofs = { git = "https://github.com/drpetervannostrand/halo2", branch = "sha256-chip" }
halo2_gadgets = { git = "https://github.com/drpetervannostrand/halo2" }
halo2_proofs = { git = "https://github.com/drpetervannostrand/halo2" }
neptune = { git = "https://github.com/filecoin-project/neptune", branch = "fr-as-trait-halo2-circuit" }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3.0"
sha2 = "0.9.2"
