[package]
name = "fil-halo2-gadgets"
version = "0.1.0"
authors = []
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
ff = "0.12.0"
halo2_proofs = "0.2.0"
halo2_gadgets = "0.2.0"
#neptune = { git = "https://github.com/filecoin-project/neptune", branch = "fr-as-trait-halo2-circuit" }
neptune = { version = "~7.2.0", features = ["bls", "pasta", "arity2", "arity4", "arity8", "arity11", "arity16", "arity24", "arity36"] }

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3.0"
sha2 = "0.9.2"
