[package]
name = "fil-proofs-bin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
anyhow = "1.0.70"
blstrs = { version = "0.6.1", default-features = false }
fil_logger = "0.1.7"
filecoin-proofs = { path = "../filecoin-proofs", version = "~14.0.0", default-features = false }
fr32 = { path = "../fr32", version = "~7.0.0", default-features = false }
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.17"
memmap2 = "0.5.10"
merkletree = "0.22.1"
serde = "1.0.159"
serde-hex = "0.1.0"
serde_json = "1.0.95"
storage-proofs-core = { path = "../storage-proofs-core", version = "~14.0.0", default-features = false}
storage-proofs-porep = { path = "../storage-proofs-porep", version = "~14.0.0", default-features = false }
