[package]
name = "fil-proofs-bin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
anyhow = "1.0.70"
bellperson = "0.26.0"
bincode = "1.3.3"
blstrs = { version = "0.7", default-features = false }
ff = "0.13.0"
fil_logger = "0.1.7"
filecoin-hashers = { path = "../filecoin-hashers", version = "~11.1.0", default-features = false }
filecoin-proofs = { path = "../filecoin-proofs", version = "~16.1.0", default-features = false, features = ["tooling"] }
fr32 = { path = "../fr32", version = "~9.1.0", default-features = false }
generic-array = "0.14.7"
hex = { version = "0.4.3", features = ["serde"] }
iowrap = "0.2.1"
log = "0.4.17"
memmap2 = "0.5.10"
merkletree = "0.23"
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.159"
serde-hex = "0.1.0"
serde_json = "1.0.95"
storage-proofs-core = { path = "../storage-proofs-core", version = "~16.1.0", default-features = false}
storage-proofs-porep = { path = "../storage-proofs-porep", version = "~16.1.0", default-features = false, features = ["tooling"] }
storage-proofs-update = { path = "../storage-proofs-update", version = "~16.1.0", default-features = false }

[features]
default = ["opencl", "multicore-sdr"]
cuda = ["filecoin-proofs/cuda", "filecoin-hashers/cuda", "storage-proofs-core/cuda", "storage-proofs-porep/cuda"]
multicore-sdr = ["filecoin-proofs/multicore-sdr", "storage-proofs-porep/multicore-sdr"]
opencl = ["filecoin-proofs/opencl", "filecoin-hashers/opencl", "storage-proofs-core/opencl", "storage-proofs-porep/opencl"]
cuda-supraseal = ["filecoin-proofs/cuda-supraseal", "storage-proofs-core/cuda-supraseal"]
