[package]
name = "fil-proofs-param"
description = "Filecoin parameter cli tools."
version = "7.0.0"
authors = [
    "dignifiedquire <dignifiedquire@gmail.com>",
    "laser <l@s3r.com>",
    "porcuquine <porcuquine@users.noreply.github.com>",
]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { workspace = true }
storage-proofs-porep = { workspace = true }
storage-proofs-post = { workspace = true }
storage-proofs-update = { workspace = true }
filecoin-proofs = { workspace = true }
rand = { workspace = true }
lazy_static = { workspace = true }
pbr = { workspace = true }
itertools = { workspace = true }
serde_json = { workspace = true }
blake2b_simd = { workspace = true }
log = { workspace = true }
fil_logger = { workspace = true }
env_proxy = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
anyhow = { workspace = true }
gperftools = { workspace = true, optional = true }
structopt = { workspace = true }
humansize = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }

[dependencies.reqwest]
workspace = true
default-features = false
features = ["blocking", "native-tls-vendored"]

[dev-dependencies]
rexpect = { workspace = true }
failure = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["opencl"]
cpu-profile = ["gperftools"]
heap-profile = ["gperftools/heap"]
simd = ["storage-proofs-core/simd"]
asm = ["storage-proofs-core/asm"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "storage-proofs-update/opencl",
]
