[package]
name = "fil-proofs-param"
description = "Filecoin parameter cli tools."
version = "14.0.1"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "laser <l@s3r.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
filecoin-proofs.workspace = true
storage-proofs-core.workspace = true
storage-proofs-porep.workspace = true
storage-proofs-post.workspace = true
storage-proofs-update.workspace = true
# Sorted alphabetically
anyhow.workspace = true
blake2b_simd.workspace = true
dialoguer.workspace = true
env_proxy = "0.4"
fil_logger.workspace = true
flate2 = { version = "1.0.9", features = ["rust_backend"] }
gperftools = { workspace = true, optional = true }
humansize.workspace = true
indicatif = "0.17"
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
pbr = "1.0"
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls-vendored"] }
serde_json.workspace = true
structopt.workspace = true
tar = "0.4.26"

[dev-dependencies]
# Sorted alphabetically
tempfile.workspace = true
failure = "0.1.7"
rexpect = "0.4.0"

[features]
default = ["opencl"]
cpu-profile = ["gperftools"]
heap-profile = ["gperftools/heap"]
simd = ["storage-proofs-core/simd"]
asm = ["storage-proofs-core/asm"]
cuda = ["storage-proofs-core/cuda", "storage-proofs-porep/cuda", "storage-proofs-post/cuda", "storage-proofs-update/cuda"]
opencl = ["storage-proofs-core/opencl", "storage-proofs-porep/opencl", "storage-proofs-post/opencl", "storage-proofs-update/opencl"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = ["filecoin-proofs/fixed-rows-to-discard", "storage-proofs-core/fixed-rows-to-discard", "storage-proofs-porep/fixed-rows-to-discard", "storage-proofs-post/fixed-rows-to-discard", "storage-proofs-update/fixed-rows-to-discard"]
