[package]
name = "fil-proofs-tooling"
description = "Tooling for rust-fil-proofs"
version = "12.0.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { workspace = true }
storage-proofs-porep = { workspace = true }
storage-proofs-post = { workspace = true }
filecoin-proofs = { workspace = true }
filecoin-hashers = { workspace = true }

clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
commandspec = { workspace = true }
chrono = { workspace = true }
memmap2 = { workspace = true }
bellperson = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
cpu-time = { workspace = true }
git2 = { workspace = true }
heim = { workspace = true }
async-std = { workspace = true }
blake2s_simd = { workspace = true }
fil_logger = { workspace = true }
log = { workspace = true }
merkletree = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
rand_xorshift = { workspace = true }
bytefmt = { workspace = true }
rayon = { workspace = true }
flexi_logger = { workspace = true }
typenum = { workspace = true }
generic-array = { workspace = true }
byte-unit = { workspace = true }
fdlimit = { workspace = true }
dialoguer = { workspace = true }
structopt = { workspace = true }
humansize = { workspace = true }
blstrs = { workspace = true }
time = { workspace = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.3.0"

[features]
default = ["opencl", "measurements"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "filecoin-proofs/cuda",
    "bellperson/cuda",
    "filecoin-hashers/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "filecoin-proofs/opencl",
    "bellperson/opencl",
    "filecoin-hashers/opencl",
]
measurements = ["storage-proofs-core/measurements"]
profile = ["storage-proofs-core/profile", "measurements"]
