[package]
name = "fil-proofs-tooling"
description = "Tooling for rust-fil-proofs"
version = "15.0.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "~15.0.0", default-features = false}
storage-proofs-porep = { path = "../storage-proofs-porep", version = "~15.0.0", default-features = false }
storage-proofs-post = { path = "../storage-proofs-post", version = "~15.0.0", default-features = false }
filecoin-proofs = { path = "../filecoin-proofs", version = "~15.0.0", default-features = false }
filecoin-hashers = { path = "../filecoin-hashers", version = "~10.0.0", default-features = false, features = ["poseidon", "blake2s", "sha256"] }
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.3.7"
commandspec = "0.12.2"
chrono = { version = "0.4.7", features = ["serde"] }
memmap2 = "0.5.6"
bellperson = "0.25.0"
rand = "0.8"
tempfile = "3.0.8"
cpu-time = "1.0.0"
blake2s_simd = "1.0.0"
fil_logger = "0.1.6"
log = "0.4.8"
merkletree = "0.23.0"
bincode = "1.1.2"
anyhow = "1.0.23"
rand_xorshift = "0.3.0"
bytefmt = "0.1.7"
rayon = "1.3.0"
flexi_logger = "0.22.3"
typenum = "1.11.2"
generic-array = "0.14.4"
byte-unit = "4.0.14"
fdlimit = "0.2.0"
dialoguer = "0.10.0"
structopt = "0.3.12"
humansize = "1.1.0"
blstrs = "0.7.0"
time = "0.3.9"
sysinfo = { version = "0.28.4", default-features = false }

[build-dependencies]
vergen = { version = "8.1.1", features = ["build", "git", "gitcl"] }

[features]
default = ["opencl", "measurements"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "filecoin-proofs/cuda",
    "bellperson/cuda",
    "filecoin-hashers/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "filecoin-proofs/opencl",
    "bellperson/opencl",
    "filecoin-hashers/opencl",
]
measurements = ["storage-proofs-core/measurements"]
profile = ["storage-proofs-core/profile", "measurements"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.3.0"
