[package]
name = "fil-proofs-tooling"
description = "Tooling for rust-fil-proofs"
version = "19.0.1"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core.workspace = true
storage-proofs-porep.workspace = true
storage-proofs-post.workspace = true
filecoin-proofs.workspace = true
filecoin-hashers = { workspace = true, features = ["poseidon", "blake2s", "sha256"] }
# Sorted alphabetically
anyhow.workspace = true
bellperson.workspace = true
bincode.workspace = true
blake2s_simd.workspace = true
blstrs.workspace = true
byte-unit = "4.0.14"
bytefmt = "0.1.7"
chrono = { version = "0.4.7", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
commandspec = "0.12.2"
cpu-time.workspace = true
dialoguer.workspace = true
fdlimit.workspace = true
fil_logger.workspace = true
flexi_logger = "0.22.3"
generic-array.workspace = true
humansize.workspace = true
log.workspace = true
memmap2.workspace = true
merkletree.workspace = true
rand.workspace = true
rand_xorshift.workspace = true
rayon.workspace = true
regex = "1.3.7"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
structopt.workspace = true
sysinfo = { version = "0.28.4", default-features = false }
tempfile.workspace = true
time = "0.3.9"
typenum.workspace = true

[build-dependencies]
vergen = { version = "8.1.1", features = ["build", "git", "gitcl"] }

[features]
default = ["opencl", "measurements"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "filecoin-proofs/cuda",
    "bellperson/cuda",
    "filecoin-hashers/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "filecoin-proofs/opencl",
    "bellperson/opencl",
    "filecoin-hashers/opencl",
]
measurements = ["storage-proofs-core/measurements"]
profile = ["storage-proofs-core/profile", "measurements"]
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = [
    "filecoin-proofs/fixed-rows-to-discard",
    "storage-proofs-core/fixed-rows-to-discard",
    "storage-proofs-porep/fixed-rows-to-discard",
    "storage-proofs-post/fixed-rows-to-discard",
]

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "10.3.0"
