[package]
name = "filecoin-hashers"
description = "Hashers used in filecoin and their abstractions."
version = "13.1.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
# Sorted alphabetically
anyhow.workspace = true
bellperson.workspace = true
blake2s_simd = { workspace = true, optional = true }
blstrs.workspace = true
ff.workspace = true
generic-array.workspace = true
hex.workspace = true
lazy_static = { workspace = true, optional = true }
merkletree.workspace = true
neptune = { workspace = true, optional = true }
rand.workspace = true
serde.workspace = true
sha2 = { workspace = true, optional = true }

[features]
default = ["opencl", "blake2s", "poseidon", "sha256"]

cuda = ["bellperson/cuda", "neptune/cuda"]
opencl = ["bellperson/opencl", "neptune/opencl"]

# available hashers
blake2s = ["blake2s_simd"]
poseidon = ["neptune", "lazy_static"]
sha256 = ["sha2"]

[dev-dependencies]
rand_xorshift.workspace = true
serde_json.workspace = true
