[package]
name = "filecoin-params"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"

[dependencies]
storage-proofs-core = { version = "^5.0.0", path = "../storage-proofs-core" }
storage-proofs-porep = { version = "^5.0.0", path = "../storage-proofs-porep" }
storage-proofs-post = { version = "^5.0.0", path = "../storage-proofs-post" }
filecoin-proofs = { version = "^5.0.0", path = "../filecoin-proofs" }
blake2b_simd = "0.5.10"
anyhow = "1.0.33"
serde_json = "1.0.59"
humansize = "1.1.0"
fil_logger = "0.1.2"
clap = "2.33.3"
dialoguer = "0.6.2"
rand = "0.7.3"
log = "0.4.11"
indicatif = "0.15.0"
structopt = "0.3.20"
flate2 = "1.0.18"
itertools = "0.9.0"
pbr = "1.0.3"
tar = "0.4.30"
env_proxy = "0.4.1"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["blocking", "native-tls-vendored"]

[dev-dependencies]
tempfile = "3.1.0"
failure = "0.1.8"
rexpect = "0.4.0"
