[package]
name = "filecoin-phase2"
description = "Filecoin specific phase2"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { version = "^5.0.0", path = "../storage-proofs-core" }
storage-proofs-post = { version = "^5.0.0", path = "../storage-proofs-post" }
storage-proofs-porep = { version = "^5.0.0", path = "../storage-proofs-porep" }
filecoin-proofs = { version = "^5.0.0", path = "../filecoin-proofs" }
bellperson = "0.9.1"
byteorder = "1.3.4"
clap = "2.33.3"
groupy = "0.3.1"
log = "0.4.11"
paired = "0.20.1"
phase2 = { version = "0.8.0", package = "phase21" }
rand = "0.7.3"
rand_chacha = "0.2.2"
simplelog = "0.8.0"
dialoguer = "0.6.2"
hex = "0.4.2"
blake2b_simd = "0.5.10"

[features]
default = ["gpu"]
gpu = ["storage-proofs-core/gpu", "filecoin-proofs/gpu", "bellperson/gpu"]