[package]
name = "filecoin-proofs"
description = "The Filecoin specific aspects of storage-proofs, including a C based FFI, to generate and verify proofs."
version = "18.0.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "laser <l@s3r.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[dependencies]
storage-proofs-core = { path = "../storage-proofs-core", version = "~18.0.0", default-features = false}
storage-proofs-porep = { path = "../storage-proofs-porep", version = "~18.0.0", default-features = false }
storage-proofs-post = { path = "../storage-proofs-post", version = "~18.0.0", default-features = false }
storage-proofs-update = { path = "../storage-proofs-update", version = "~18.0.0", default-features = false }
filecoin-hashers = { version = "~12.0.0", path = "../filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
rand = "0.8"
lazy_static = "1.2"
memmap2 = "0.5.6"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
blake2b_simd = "1.0.0"
bellperson = "0.26.0"
log = "0.4.7"
rayon = "1.1.0"
hex = "0.4.0"
merkletree = "0.23.0"
bincode = "1.1.2"
anyhow = "1.0.23"
sha2 = "0.10.2"
typenum = "1.11.2"
gperftools = { version = "0.2", optional = true }
generic-array = "0.14.4"
fr32 = { path = "../fr32", version = "~10.0.0", default-features = false }
once_cell = "1.8.0"
blstrs = "0.7.0"
ff = { version = "0.13.0", default-features = false }
iowrap = "0.2.1"

[dev-dependencies]
criterion = "0.3"
tempfile = "3"
fil_logger = "0.1.6"
rand_xorshift = "0.3.0"
walkdir = "2.3.2"

[features]
default = ["opencl"]
cpu-profile = ["gperftools"]
heap-profile = ["gperftools/heap"]
simd = ["storage-proofs-core/simd"]
asm = ["storage-proofs-core/asm"]
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
    "bellperson/cuda",
    "filecoin-hashers/cuda",
]
cuda-supraseal = [
    "storage-proofs-core/cuda-supraseal",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
    "bellperson/cuda-supraseal",
    "filecoin-hashers/cuda",
]
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "storage-proofs-update/opencl",
    "bellperson/opencl",
    "filecoin-hashers/opencl",
]
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
big-tests = []
# This feature enables a fixed number of discarded rows for TreeR. The `FIL_PROOFS_ROWS_TO_DISCARD`
# setting is ignored, no `TemporaryAux` file will be written.
fixed-rows-to-discard = [
    "storage-proofs-core/fixed-rows-to-discard",
    "storage-proofs-porep/fixed-rows-to-discard",
    "storage-proofs-post/fixed-rows-to-discard",
    "storage-proofs-update/fixed-rows-to-discard",
]

[[bench]]
name = "preprocessing"
harness = false

[[bench]]
name = "aggregation"
harness = false
