# --- Cargo.toml: Filecoin Proofs Package Manifest ---

[package]
name = "filecoin-proofs"
description = "The Filecoin specific aspects of storage-proofs, including a C based FFI, to generate and verify proofs."
# Version updated for consistency and new feature set.
version = "19.0.1" 
# Upgraded to the modern Rust edition for improved syntax and module resolution.
edition = "2021" 
authors = ["dignifiedquire <dignifiedquire@gmail.com>", "laser <l@s3r.com>", "porcuquine <porcuquine@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/filecoin-project/rust-fil-proofs"
readme = "README.md"

[features]
# The default feature set, enabling OpenCL acceleration by default.
default = ["opencl"]
# Enables CPU profiling using gperftools.
cpu-profile = ["gperftools"]
# Enables heap profiling using gperftools.
heap-profile = ["gperftools/heap"]
# Enables SIMD instructions in core proof structures.
simd = ["storage-proofs-core/simd"]
# Enables ASM assembly optimizations in core proof structures.
asm = ["storage-proofs-core/asm"]

# Enables CUDA acceleration for all related proof components and supporting libraries.
cuda = [
    "storage-proofs-core/cuda",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
    "bellperson/cuda",
    "filecoin-hashers/cuda",
]
# Enables CUDA with optimizations specific to the Supraseal sealing process.
cuda-supraseal = [
    "storage-proofs-core/cuda-supraseal",
    "storage-proofs-porep/cuda",
    "storage-proofs-post/cuda",
    "storage-proofs-update/cuda",
    "bellperson/cuda-supraseal",
    "filecoin-hashers/cuda",
]
# Enables OpenCL acceleration for all related proof components.
opencl = [
    "storage-proofs-core/opencl",
    "storage-proofs-porep/opencl",
    "storage-proofs-post/opencl",
    "storage-proofs-update/opencl",
    "bellperson/opencl",
    "filecoin-hashers/opencl",
]
# Enables parallel processing for the SDR (Stacked Depth Robust) PoRep algorithm.
multicore-sdr = ["storage-proofs-porep/multicore-sdr"]
# Feature for enabling longer, more intensive tests during development/CI.
big-tests = []
# Enables a fixed number of discarded rows for TreeR, overriding dynamic settings.
fixed-rows-to-discard = [
    "storage-proofs-core/fixed-rows-to-discard",
    "storage-proofs-porep/fixed-rows-to-discard",
    "storage-proofs-post/fixed-rows-to-discard",
    "storage-proofs-update/fixed-rows-to-discard",
]
# Enables persistence of regression proofs using an optional file-lock.
persist-regression-proofs = ["dep:file-lock"]

# --- Dependencies ---

[dependencies]
# Local Workspace Dependencies (Core Proof Structures)
filecoin-hashers = { workspace = true, features = ["poseidon", "sha256"] }
fr32.workspace = true
storage-proofs-core.workspace = true
storage-proofs-porep.workspace = true
storage-proofs-post.workspace = true
storage-proofs-update.workspace = true

# Standard Library/Utility Dependencies (Alphabetical)
anyhow.workspace = true
bellperson.workspace = true
bincode.workspace = true
blake2b_simd.workspace = true
blstrs.workspace = true
ff.workspace = true
generic-array.workspace = true
hex.workspace = true
# External dependencies (non-workspace)
iowrap = "0.2.1" # Consider upgrading to latest
lazy_static.workspace = true
log.workspace = true
memmap2.workspace = true
merkletree.workspace = true
once_cell = "1.8.0" # Consider upgrading to latest
rand.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["rc", "derive"] }
serde_json.workspace = true
sha2.workspace = true
typenum.workspace = true

# Optional Dependencies
gperftools = { workspace = true, optional = true }
file-lock = { version = "2.1.10", optional = true }

# --- Development Dependencies ---

[dev-dependencies]
# Sorted alphabetically
criterion.workspace = true
fil_logger.workspace = true
rand_xorshift.workspace = true
tempfile.workspace = true
walkdir = "2.3.2"

# --- Benchmarks ---

[[bench]]
name = "preprocessing"
harness = false

[[bench]]
name = "aggregation"
harness = false
