[package]
name = "fr32"
version = "5.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Filecoin proofs Fr/32-byte conversion tooling"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
anyhow = { workspace = true }
byte-slice-cast = { workspace = true }
byteorder = { workspace = true }
ff = { workspace = true }
thiserror = { workspace = true }
blstrs = { workspace = true }

[dev-dependencies]
bitvec = { workspace = true }
criterion = { workspace = true }
itertools = { workspace = true }
pretty_assertions = { workspace = true }
rand = { workspace = true }
rand_xorshift = { workspace = true }

[[bench]]
name = "fr"
harness = false
