[package]
name = "fr32"
version = "7.0.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
description = "Filecoin proofs Fr/32-byte conversion tooling"
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/filecoin-project/rust-fil-proofs"

[dependencies]
anyhow = "1.0.23"
byte-slice-cast = "1.0.0"
byteorder = "1"
ff = "0.12.0"
thiserror = "1.0.6"
blstrs = "0.6.0"
pasta_curves = { version = "0.5.2", optional = true, features = ["repr-c", "serde"], package = "fil_pasta_curves" }


[dev-dependencies]
bitvec = "0.17"
criterion = "0.3"
itertools = "0.10.3"
pretty_assertions = "1.2.0"
rand = "0.8"
rand_xorshift = "0.3"

[features]
nova = ["pasta_curves"]

[[bench]]
name = "fr"
harness = false
